@@ -6,6 +6,9 @@ nobase_toolbox2_PYTHON = \
 	action/extract/__init__.py \
 	action/extract/kttoolbox_extract.py \
 	action/rewrap/__init__.py \
+	action/rewrap/manzanita_rewrap.py \
 	action/transcode/__init__.py \
 	worker/__init__.py \
-	worker/kttoolbox.py
+	worker/ffmpeg.py \
+	worker/kttoolbox.py \
+	worker/manzanita.py
